add responsive masonry

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             class="bg-darkbeige flex h-full flex-col justify-center bg-opacity-[0.85] px-12 pb-16 pt-0 sm:block sm:bg-transparent sm:pt-16 md:px-20 md:py-24 lg:pr-36"
           >
             <h1
-              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 md:text-4xl md:text-left xl:text-5xl 2xl:text-6xl"
+              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 md:text-left md:text-4xl xl:text-5xl 2xl:text-6xl"
             >
               Nowoczesna aranżacja
               <br />
@@ -308,7 +308,7 @@
             class="bg-darkbeige flex h-full flex-col justify-center bg-opacity-[0.85] px-12 pb-16 pt-0 sm:block sm:bg-transparent sm:pt-16 md:px-20 md:py-24 lg:pr-16"
           >
             <h3
-              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 md:text-4xl md:text-left xl:text-5xl 2xl:text-6xl"
+              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 md:text-left md:text-4xl xl:text-5xl 2xl:text-6xl"
             >
               Magiczna przestrzeń przez Cztery Pory Roku
             </h3>
@@ -336,7 +336,7 @@
       </div>
 
       <!-- ==== THIRD SLIDE ==== -->
-    
+
       <div
         class="slides slide-right absolute left-0 top-[88px] flex h-[560px] w-full flex-row-reverse transition-all duration-500 sm:top-[80px] sm:h-[720px] md:top-[95px] lg:top-[99px]"
       >
@@ -350,7 +350,7 @@
             class="bg-darkbeige flex h-full flex-col justify-center bg-opacity-[0.85] px-8 pb-16 pt-0 sm:block sm:bg-transparent sm:pt-16 md:px-20 md:py-24 lg:pr-16"
           >
             <h3
-              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 md:text-4xl md:text-left xl:text-5xl 2xl:text-6xl"
+              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 md:text-left md:text-4xl xl:text-5xl 2xl:text-6xl"
             >
               Żniwa z Twojego ogrodu
             </h3>
@@ -379,7 +379,7 @@
     </section>
     <!-- ==== OFFER SECTION ==== -->
     <section
-      class="offer-section bg-lightbeige relative mx-auto mt-[648px] max-w-[1536px] translate-y-[100%] pb-20 md:pb-32 opacity-0 delay-500 duration-1000 md:mt-[815px] lg:mt-[819px]"
+      class="offer-section bg-lightbeige relative mx-auto mt-[648px] max-w-[1536px] translate-y-[100%] pb-20 opacity-0 delay-500 duration-1000 md:mt-[815px] md:pb-32 lg:mt-[819px]"
     >
       <!-- ==== SLIDER NAV ====-->
       <div
@@ -387,7 +387,7 @@
       >
         <button
           onClick="plusDivs(-1)"
-          class="hover:bg-forestgreen flex md:h-20 md:w-20 h-16 w-16 items-center justify-center transition-all hover:text-white"
+          class="hover:bg-forestgreen flex h-16 w-16 items-center justify-center transition-all hover:text-white md:h-20 md:w-20"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -395,7 +395,7 @@
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="md:h-7 md:w-7 h-7 w-7"
+            class="h-7 w-7 md:h-7 md:w-7"
           >
             <path
               stroke-linecap="round"
@@ -406,7 +406,7 @@
         </button>
         <button
           onClick="plusDivs(+1)"
-          class="hover:bg-forestgreen flex md:h-20 md:w-20 h-16 w-16 items-center justify-center transition-all hover:text-white"
+          class="hover:bg-forestgreen flex h-16 w-16 items-center justify-center transition-all hover:text-white md:h-20 md:w-20"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -414,7 +414,7 @@
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="md:h-7 md:w-7 h-7 w-7 "
+            class="h-7 w-7 md:h-7 md:w-7"
           >
             <path
               stroke-linecap="round"
@@ -425,9 +425,9 @@
         </button>
       </div>
       <!-- ==== OFFER HEADER ====-->
-      <div class="mx-auto px-6 sm:px-12 xl:ml-64 max-w-3xl md:pt-28 sm:pt-24 pt-16">
+      <div class="mx-auto max-w-3xl px-6 pt-16 sm:px-12 sm:pt-24 md:pt-28 xl:ml-64">
         <h3 class="text-md text-forestgreen">Oferta</h3>
-        <h5 class="font-monts mt-5 lg:text-5xl font-medium text-4xl">
+        <h5 class="font-monts mt-5 text-4xl font-medium lg:text-5xl">
           Działamy
           <i class="font-inter">kompleksowo</i>
         </h5>
@@ -438,19 +438,28 @@
         </p>
       </div>
       <!-- ==== GRID COLUMNS ====-->
-      <div class="mt-10 sm:mt-16 lg:mt-20 grid grid-cols-1 sm:grid-cols-3 2xl:gap-16 xl:gap-12 lg:gap-10 md:gap-8 sm:gap-5 gap-8 2xl:px-24 xl:px-16 md:px-8 sm:px-6 px-5">
-        <div class="flex sm:aspect-square h-full w-full flex-col rounded-3xl bg-white 2xl:p-12 xl:p-8 p-6">
+      <div
+        class="mt-10 grid grid-cols-1 gap-8 px-5 sm:mt-16 sm:grid-cols-3 sm:gap-5 sm:px-6 md:gap-8 md:px-8 lg:mt-20 lg:gap-10 xl:gap-12 xl:px-16 2xl:gap-16 2xl:px-24"
+      >
+        <div
+          class="flex h-full w-full flex-col rounded-3xl bg-white p-6 sm:aspect-square xl:p-8 2xl:p-12"
+        >
           <div
-            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-6 w-6 lg:h-8 lg:w-8 2xl:h-10 2xl:w-10 animate-ping rounded-full"
+            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-6 w-6 animate-ping rounded-full lg:h-8 lg:w-8 2xl:h-10 2xl:w-10"
           ></div>
-          <img src="/public/images/offer_icon_1.svg" class="absolute h-8 w-8 lg:h-10 lg:w-10 xl:h-12 xl:w-12 " />
-          <h6 class="font-monts mt-12 lg:mt-14 xl:mt-20 text-2xl lg:text-3xl font-medium">Projekty</h6>
-          <p class="mt-3 mb-2">
+          <img
+            src="/public/images/offer_icon_1.svg"
+            class="absolute h-8 w-8 lg:h-10 lg:w-10 xl:h-12 xl:w-12"
+          />
+          <h6 class="font-monts mt-12 text-2xl font-medium lg:mt-14 lg:text-3xl xl:mt-20">
+            Projekty
+          </h6>
+          <p class="mb-2 mt-3">
             Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej
             przestrzeni.
           </p>
           <a
-            class="text-forestgreen border-forestgreen group mr-auto mt-2 sm:mt-auto flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0"
+            class="text-forestgreen border-forestgreen group mr-auto mt-2 flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0 sm:mt-auto"
             href=""
             >Dowiedz się więcej
             <svg
@@ -469,18 +478,25 @@
             </svg>
           </a>
         </div>
-        <div class="flex sm:aspect-square h-full w-full flex-col rounded-3xl bg-white 2xl:p-12 xl:p-8 p-6">
+        <div
+          class="flex h-full w-full flex-col rounded-3xl bg-white p-6 sm:aspect-square xl:p-8 2xl:p-12"
+        >
           <div
-            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-6 w-6 lg:h-8 lg:w-8 2xl:h-10 2xl:w-10 animate-ping rounded-full"
+            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-6 w-6 animate-ping rounded-full lg:h-8 lg:w-8 2xl:h-10 2xl:w-10"
           ></div>
-          <img src="/public/images/offer_icon_2.svg" class="absolute h-8 w-8 lg:h-10 lg:w-10 xl:h-12 xl:w-12" />
-          <h6 class="font-monts mt-12 lg:mt-14 xl:mt-20 text-2xl lg:text-3xl font-medium">Wizualizacje</h6>
-          <p class="mt-3 mb-2">
+          <img
+            src="/public/images/offer_icon_2.svg"
+            class="absolute h-8 w-8 lg:h-10 lg:w-10 xl:h-12 xl:w-12"
+          />
+          <h6 class="font-monts mt-12 text-2xl font-medium lg:mt-14 lg:text-3xl xl:mt-20">
+            Wizualizacje
+          </h6>
+          <p class="mb-2 mt-3">
             Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru animowanego w
             technologii 3D.
           </p>
           <a
-            class="text-forestgreen border-forestgreen group mr-auto mt-2 sm:mt-auto flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0"
+            class="text-forestgreen border-forestgreen group mr-auto mt-2 flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0 sm:mt-auto"
             href=""
             >Dowiedz się więcej
             <svg
@@ -499,18 +515,25 @@
             </svg>
           </a>
         </div>
-        <div class="flex sm:aspect-square h-full w-full flex-col rounded-3xl bg-white 2xl:p-12 xl:p-8 p-6">
+        <div
+          class="flex h-full w-full flex-col rounded-3xl bg-white p-6 sm:aspect-square xl:p-8 2xl:p-12"
+        >
           <div
-            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-6 w-6 lg:h-8 lg:w-8 2xl:h-10 2xl:w-10 animate-ping rounded-full"
+            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-6 w-6 animate-ping rounded-full lg:h-8 lg:w-8 2xl:h-10 2xl:w-10"
           ></div>
-          <img src="/public/images/offer_icon_3.svg" class="absolute h-8 w-8 lg:h-10 lg:w-10 xl:h-12 xl:w-12" />
-          <h6 class="font-monts mt-12 lg:mt-14 xl:mt-20 text-2xl lg:text-3xl font-medium">Realizacje</h6>
-          <p class="mt-3 mb-2">
+          <img
+            src="/public/images/offer_icon_3.svg"
+            class="absolute h-8 w-8 lg:h-10 lg:w-10 xl:h-12 xl:w-12"
+          />
+          <h6 class="font-monts mt-12 text-2xl font-medium lg:mt-14 lg:text-3xl xl:mt-20">
+            Realizacje
+          </h6>
+          <p class="mb-2 mt-3">
             Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i zaawansowanych
             technologii.
           </p>
           <a
-            class="text-forestgreen border-forestgreen group mr-auto mt-2 sm:mt-auto flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0"
+            class="text-forestgreen border-forestgreen group mr-auto mt-2 flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0 sm:mt-auto"
             href=""
             >Zobacz nasze realizacje
             <svg
@@ -540,42 +563,42 @@
               class="hidden h-full w-1/2 bg-[url('/public/images/third_section_garden.png')] bg-cover bg-no-repeat sm:block"
             ></div>
             <div
-              class="sm:bg-forestgreen text-lightbeige bg-[url('public/images/third_section_garden.png')] sm:bg-none flex h-full sm:w-1/2 max-w-[768px] flex-col justify-center"
+              class="sm:bg-forestgreen text-lightbeige flex h-full max-w-[768px] flex-col justify-center bg-[url('public/images/third_section_garden.png')] sm:w-1/2 sm:bg-none"
             >
-            <div
-            class="bg-forestgreen flex h-full flex-col justify-center bg-opacity-[0.9]  px-6 sm:px-12 md:px-16 lg:px-24 xl:pl-40 xl:pr-32"
-          >
-              <h3 class="text-md">O firmie</h3>
-              <h5 class="font-monts mt-5 text-4xl lg:text-5xl font-medium leading-[120%]">
-                Tworzymy<br class="hidden md:inline" />
-                z pasją
-              </h5>
-              <p class="text-md mt-10">
-                Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą wykwalifikowani
-                projektanci oraz architekci, których zadaniem jest rozpoznanie i realizacja potrzeb
-                każdego Klienta. Nasza specjalizacja to przestrzenie nowoczesne, które
-                charakteryzuje minimalizm, geometria i elegancka prostota. Tworzymy ogrody
-                małoobsługowe, dostosowane do współczesnego trybu życia.
-              </p>
-              <button
-                class="hover:bg-lightbeige text-lightbeige border-lightbeige hover:group mt-8 md:mt-10 lg:mt-16 flex w-64 items-center justify-center gap-x-2 rounded-full border-2 border-solid bg-transparent py-3 transition-all hover:rotate-3 hover:bg-opacity-10 hover:pl-5 hover:pr-1 hover:drop-shadow-xl"
+              <div
+                class="bg-forestgreen flex h-full flex-col justify-center bg-opacity-[0.9] px-6 sm:px-12 md:px-16 lg:px-24 xl:pl-40 xl:pr-32"
               >
-                Poznaj nas bliżej
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="h-6 w-6 transition-all group-hover:translate-x-1"
+                <h3 class="text-md">O firmie</h3>
+                <h5 class="font-monts mt-5 text-4xl font-medium leading-[120%] lg:text-5xl">
+                  Tworzymy<br class="hidden md:inline" />
+                  z pasją
+                </h5>
+                <p class="text-md mt-10">
+                  Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą wykwalifikowani
+                  projektanci oraz architekci, których zadaniem jest rozpoznanie i realizacja
+                  potrzeb każdego Klienta. Nasza specjalizacja to przestrzenie nowoczesne, które
+                  charakteryzuje minimalizm, geometria i elegancka prostota. Tworzymy ogrody
+                  małoobsługowe, dostosowane do współczesnego trybu życia.
+                </p>
+                <button
+                  class="hover:bg-lightbeige text-lightbeige border-lightbeige hover:group mt-8 flex w-64 items-center justify-center gap-x-2 rounded-full border-2 border-solid bg-transparent py-3 transition-all hover:rotate-3 hover:bg-opacity-10 hover:pl-5 hover:pr-1 hover:drop-shadow-xl md:mt-10 lg:mt-16"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75"
-                  />
-                </svg>
-              </button>
+                  Poznaj nas bliżej
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="h-6 w-6 transition-all group-hover:translate-x-1"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75"
+                    />
+                  </svg>
+                </button>
               </div>
             </div>
           </div>
@@ -584,9 +607,9 @@
     </section>
     <!-- ==== MASONRY SECTION ====-->
     <section id="masonry-section" class="bg-darkbeige relative mx-auto max-w-[1536px]">
-      <div class="ml-64 max-w-3xl pt-28">
+      <div class="ml-10 sm:ml-16 md:ml-32 lg:ml-48 xl:ml-64 pt-14 md:pt-20 lg:pt-28">
         <h3 class="text-md text-forestgreen">Realizacje</h3>
-        <h5 class="font-monts mb-24 mt-5 text-5xl font-medium">
+        <h5 class="font-monts mb-10 md:mb-16 lg:mb-24 mt-5 text-4xl lg:text-5xl font-medium">
           Nasze
           <i class="font-inter">projekty</i>
         </h5>
@@ -595,70 +618,70 @@
         class="projects-masonry js-masonry mx-10 grid overflow-hidden transition-all duration-1000"
         data-masonry-options='{ "itemSelector": ".grid-item", "columnWidth": 0}'
       >
-        <div class="grid-item w-1/3 p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_0.png"
             alt="project photo"
             class="h-auto w-full cursor-pointer rounded-sm transition-all hover:scale-105"
           />
         </div>
-        <div class="grid-item w-1/3 p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_1.png"
             alt="project photo"
             class="h-auto w-full cursor-pointer rounded-sm transition-all hover:scale-105"
           />
         </div>
-        <div class="grid-item w-1/3 p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_2.png"
             alt="project photo"
             class="h-auto w-full cursor-pointer rounded-sm transition-all hover:scale-105"
           />
         </div>
-        <div class="grid-item w-1/3 p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_3.png"
             alt="project photo"
             class="h-auto w-full cursor-pointer rounded-sm transition-all hover:scale-105"
           />
         </div>
-        <div class="grid-item w-1/3 p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_4.png"
             alt="project photo"
             class="h-auto w-full cursor-pointer rounded-sm transition-all hover:scale-105"
           />
         </div>
-        <div class="grid-item w-1/3 p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_5.png"
             alt="project photo"
             class="h-auto w-full cursor-pointer rounded-sm transition-all hover:scale-105"
           />
         </div>
-        <div class="grid-item w-1/3 p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_6.png"
             alt="project photo"
             class="h-auto w-full cursor-pointer rounded-sm transition-all hover:scale-105"
           />
         </div>
-        <div class="grid-item w-1/3 p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_7.png"
             alt="project photo"
             class="h-auto w-full cursor-pointer rounded-sm transition-all hover:scale-105"
           />
         </div>
-        <div class="grid-item w-1/3 p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_8.png"
             alt="project photo"
             class="h-auto w-full cursor-pointer rounded-sm transition-all hover:scale-105"
           />
         </div>
-        <div class="grid-item w-1/3 overflow-hidden p-5">
+        <div class="grid-item w-1/2 lg:w-1/3 lg:p-5 md:p-4 sm:p-2 p-1">
           <img
             src="public/images/project_9.png"
             alt="project photo"
@@ -666,7 +689,7 @@
           />
         </div>
       </div>
-      <div class="flex h-40 items-center justify-center pb-16">
+      <div class="flex lg:h-40 items-center justify-center pb-6 md:pb-8 lg:pb-16">
         <button
           class="hide-projects bg-darkbeige text-almostblack border-almostblack group pointer-events-auto flex items-center justify-center rounded-full border-2 border-solid bg-opacity-70 py-3 pl-6 pr-4 transition-all duration-1000 hover:-translate-y-3 hover:bg-white hover:bg-opacity-20 hover:to-transparent"
         >
