--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
           />
         </div>
       </div>
-      <div class="flex lg:h-40 items-center justify-center pb-6 md:pb-8 lg:pb-16">
+      <div class="flex pt-6 lg:h-40 items-center justify-center pb-6 md:pb-8 lg:pb-16">
         <button
           class="hide-projects bg-darkbeige text-almostblack border-almostblack group pointer-events-auto flex items-center justify-center rounded-full border-2 border-solid bg-opacity-70 py-3 pl-6 pr-4 transition-all duration-1000 hover:-translate-y-3 hover:bg-white hover:bg-opacity-20 hover:to-transparent"
         >
@@ -711,7 +711,7 @@
         </button>
       </div>
       <div
-        class="projects-overlay to-darkbeige pointer-events-none absolute bottom-0 left-0 mb-[840px] flex h-[720px] w-full items-end justify-center bg-gradient-to-b from-transparent duration-1000"
+        class="projects-overlay to-darkbeige pointer-events-none absolute bottom-0 left-0 mb-[400px] sm:mb-[840px] flex h-[720px] w-full items-end justify-center bg-gradient-to-b from-transparent duration-1000"
       >
         <button
           class="expand-projects bg-darkbeige text-almostblack border-almostblack group pointer-events-auto mb-24 flex items-center justify-center rounded-full border-2 border-solid bg-opacity-70 py-3 pl-6 pr-4 transition-all duration-1000 hover:translate-y-3 hover:bg-white hover:bg-opacity-20 hover:to-transparent"
@@ -736,7 +736,7 @@
     </section>
     <!-- ==== CONTACT ==== -->
     <section
-      class="contact-section relative mx-auto mt-[-840px] w-full max-w-[1536px] duration-1000"
+      class="contact-section relative mx-auto mt-[-400px] sm:mt-[-840px] w-full max-w-[1536px] duration-1000"
     >
       <div class="bg-lightbeige flex h-[560px] w-full items-center justify-center duration-1000">
         <div class="bg-forestgreen mx-32 flex h-[400px] w-full items-center justify-center">
@@ -874,17 +874,17 @@
           $('.projects-overlay').toggleClass('opacity-50')
         })
         $('.expand-projects').click(function () {
-          $('.projects-overlay').toggleClass('opacity-0 mb-[840px]')
+          $('.projects-overlay').toggleClass('opacity-0 mb-[400px] sm:mb-[840px]')
           $('.expand-projects').toggleClass('hidden')
-          $('.contact-section').toggleClass('mt-[-840px]')
+          $('.contact-section').toggleClass('mt-[-400px] sm:mt-[840px]')
         })
         $('.hide-projects').hover(function () {
           $('.projects-overlay').toggleClass('opacity-100')
         })
         $('.hide-projects').click(function () {
-          $('.projects-overlay').toggleClass('opacity-0 mb-[840px]')
+          $('.projects-overlay').toggleClass('opacity-0 mb-[400px] sm:mb-[840px]')
           $('.expand-projects').toggleClass('hidden')
-          $('.contact-section').toggleClass('mt-[-840px]')
+          $('.contact-section').toggleClass('mt-[-400px] sm:mt-[840px]')
         })
       })
     </script>
