--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
       </div>
       <div class="flex pt-6 lg:h-40 items-center justify-center pb-6 md:pb-8 lg:pb-16">
         <button
-          class="hide-projects bg-darkbeige text-almostblack border-almostblack group pointer-events-auto flex items-center justify-center rounded-full border-2 border-solid bg-opacity-70 py-3 pl-6 pr-4 transition-all duration-1000 hover:-translate-y-3 hover:bg-white hover:bg-opacity-20 hover:to-transparent"
+          class="invisible hide-projects bg-darkbeige text-almostblack border-almostblack group pointer-events-auto flex items-center justify-center rounded-full border-2 border-solid bg-opacity-70 py-3 pl-6 pr-4 transition-all duration-1000 hover:-translate-y-3 hover:bg-white hover:bg-opacity-20 hover:to-transparent"
         >
           Schowaj
           <svg
@@ -711,7 +711,7 @@
         </button>
       </div>
       <div
-        class="projects-overlay to-darkbeige pointer-events-none absolute bottom-0 left-0 mb-[400px] sm:mb-[840px] flex h-[720px] w-full items-end justify-center bg-gradient-to-b from-transparent duration-1000"
+        class="projects-overlay to-darkbeige pointer-events-none absolute bottom-0 left-0 mb-[400px] sm:mb-[840px] flex h-[720px] w-full items-end justify-center bg-gradient-to-b from-transparent transition-all duration-1000"
       >
         <button
           class="expand-projects bg-darkbeige text-almostblack border-almostblack group pointer-events-auto mb-24 flex items-center justify-center rounded-full border-2 border-solid bg-opacity-70 py-3 pl-6 pr-4 transition-all duration-1000 hover:translate-y-3 hover:bg-white hover:bg-opacity-20 hover:to-transparent"
@@ -736,22 +736,22 @@
     </section>
     <!-- ==== CONTACT ==== -->
     <section
-      class="contact-section relative mx-auto mt-[-400px] sm:mt-[-840px] w-full max-w-[1536px] duration-1000"
+      class="contact-section relative mx-auto mt-[-400px] sm:mt-[-840px] w-full max-w-[1536px] transition-all duration-1000"
     >
-      <div class="bg-lightbeige flex h-[560px] w-full items-center justify-center duration-1000">
-        <div class="bg-forestgreen mx-32 flex h-[400px] w-full items-center justify-center">
-          <div class="mx-36 flex w-full items-center justify-between">
-            <h4 class="font-monts text-4xl leading-[150%] text-white">
+      <div class="bg-lightbeige flex h-[560px] w-full items-center justify-center">
+        <div class="bg-forestgreen mx-6 md:mx-12 lg:mx-20 xl:mx-32 flex  h-[400px] w-full items-center justify-center">
+          <div class="px-12 md:px-16 lg:px-24 xl:px-36 flex md:flex-row flex-col w-full items-center justify-around md:justify-between space-x-4">
+            <h4 class="font-monts text-center text-2xl sm:text-3xl md:text-left md:text-4xl leading-[150%] text-white">
               Zostańmy w kontakcie!
               <br />
               Znajdziesz nas na
               <i class="font-inter font-medium italic">Instagramie.</i>
             </h4>
-            <div class="w-[170px]">
-              <p class="text-white">Śledź nasze najnowsze realizacje!</p>
+            <div class="w-full md:w-[170px]">
+              <p class="text-white text-center md:text-left mt-6 md:mt-0">Śledź nasze najnowsze realizacje!</p>
               <a href="https://www.instagram.com/">
                 <button
-                  class="text-forestgreen hover:bg-lightbeige mt-6 rounded-full bg-white px-6 py-3 transition-all hover:drop-shadow-xl"
+                  class="block mx-auto text-forestgreen hover:bg-lightbeige mt-3 md:mt-6 rounded-full bg-white px-6 py-3 transition-all hover:drop-shadow-xl"
                 >
                   Instagram
                 </button></a
@@ -874,17 +874,23 @@
           $('.projects-overlay').toggleClass('opacity-50')
         })
         $('.expand-projects').click(function () {
-          $('.projects-overlay').toggleClass('opacity-0 mb-[400px] sm:mb-[840px]')
+          $('.projects-overlay').toggleClass('opacity-0 mb-[400px]')
+          $('.projects-overlay').toggleClass('sm:mb-[840px]')
           $('.expand-projects').toggleClass('hidden')
-          $('.contact-section').toggleClass('mt-[-400px] sm:mt-[840px]')
+          $('.hide-projects').toggleClass('invisible')
+          $('.contact-section').toggleClass('mt-[-400px]')
+          $('.contact-section').toggleClass('sm:mt-[-840px]')
         })
         $('.hide-projects').hover(function () {
           $('.projects-overlay').toggleClass('opacity-100')
         })
         $('.hide-projects').click(function () {
-          $('.projects-overlay').toggleClass('opacity-0 mb-[400px] sm:mb-[840px]')
+          $('.projects-overlay').toggleClass('opacity-0 mb-[400px]')
+          $('.projects-overlay').toggleClass('sm:mb-[840px]')
           $('.expand-projects').toggleClass('hidden')
-          $('.contact-section').toggleClass('mt-[-400px] sm:mt-[840px]')
+          $('.hide-projects').toggleClass('invisible')
+          $('.contact-section').toggleClass('mt-[-400px]')
+          $('.contact-section').toggleClass('sm:mt-[-840px]')
         })
       })
     </script>
